exports[`<SearchForm /> gives correct feedback when loaded 1`] = `
<form
  className="search-form"
  onSubmit={[Function anonymous]}>
  <div
    className="search-input input-group">
    <label
      className="form-group-title"
      htmlFor="search-box">
      Search
      <span
        className="sr-only">
         App Catalog
      </span>
    </label>
    <input
      className="form-control"
      id="search-box"
      onChange={[Function anonymous]}
      title="searchQuery"
      type="search"
      value="test search" />
    <button
      className="btn clear-btn"
      onClick={[Function anonymous]}
      type="button">
      <span
        className="sr-only">
        Clear
      </span>
      <span
        aria-hidden="true"
        className="icon-close" />
    </button>
    <span
      className="input-group-btn search-btn">
      <button
        className="btn btn-primary"
        type="submit">
        <span
          className="sr-only">
          Search
        </span>
        <span
          aria-hidden="true"
          className="icon-search" />
      </button>
    </span>
  </div>
  <p />
</form>
`;

exports[`<SearchForm /> gives correct feedback when loading 1`] = `
<form
  className="search-form"
  onSubmit={[Function anonymous]}>
  <div
    className="search-input input-group">
    <label
      className="form-group-title"
      htmlFor="search-box">
      Search
      <span
        className="sr-only">
         App Catalog
      </span>
    </label>
    <input
      className="form-control"
      id="search-box"
      onChange={[Function anonymous]}
      title="searchQuery"
      type="search"
      value="test search" />
    <button
      className="btn clear-btn"
      onClick={[Function anonymous]}
      type="button">
      <span
        className="sr-only">
        Clear
      </span>
      <span
        aria-hidden="true"
        className="icon-close" />
    </button>
    <span
      className="input-group-btn search-btn">
      <button
        className="btn btn-primary"
        type="submit">
        <span
          className="sr-only">
          Search
        </span>
        <span
          aria-hidden="true"
          className="icon-search" />
      </button>
    </span>
  </div>
  <p />
</form>
`;

exports[`<SearchForm /> matches previous snapshot 1`] = `
<form
  className="search-form"
  onSubmit={[Function anonymous]}>
  <div
    className="search-input input-group">
    <label
      className="form-group-title"
      htmlFor="search-box">
      Search
      <span
        className="sr-only">
         App Catalog
      </span>
    </label>
    <input
      className="form-control"
      id="search-box"
      onChange={[Function anonymous]}
      title="searchQuery"
      type="search"
      value="" />
    <span
      className="input-group-btn search-btn">
      <button
        className="btn btn-primary"
        type="submit">
        <span
          className="sr-only">
          Search
        </span>
        <span
          aria-hidden="true"
          className="icon-search" />
      </button>
    </span>
  </div>
  <p />
</form>
`;

exports[`<SearchForm /> matches previous snapshot 2`] = `
<form
  className="search-form"
  onSubmit={[Function anonymous]}>
  <div
    className="search-input input-group">
    <label
      className="form-group-title"
      htmlFor="search-box">
      Search
      <span
        className="sr-only">
         App Catalog
      </span>
    </label>
    <input
      className="form-control"
      id="search-box"
      onChange={[Function anonymous]}
      title="searchQuery"
      type="search"
      value="test search" />
    <button
      className="btn clear-btn"
      onClick={[Function anonymous]}
      type="button">
      <span
        className="sr-only">
        Clear
      </span>
      <span
        aria-hidden="true"
        className="icon-close" />
    </button>
    <span
      className="input-group-btn search-btn">
      <button
        className="btn btn-primary"
        type="submit">
        <span
          className="sr-only">
          Search
        </span>
        <span
          aria-hidden="true"
          className="icon-search" />
      </button>
    </span>
  </div>
  <p />
</form>
`;
